# secure-local-dev-env

./: .dockerignore  .gitignore  README.md  docker-compose.yml  justfile
.cursor/rules/: api-node.mdc  cursor-knowledge-sync.mdc  database.mdc  devops.mdc  documentation.mdc  frontend-next.mdc  justfile.mdc  project-core.mdc  scripts-location.mdc  security.mdc  testing.mdc  ui-shadcn.mdc  ux-b2c.mdc
.cursor/skills/application-security/: SKILL.md
.cursor/skills/backend-rust-api/: SKILL.md
.cursor/skills/database-postgres/: SKILL.md
.cursor/skills/deps-compose-docker/: SKILL.md
.cursor/skills/devops-ci-cd/: SKILL.md
.cursor/skills/just-recipes/: SKILL.md
api-node/: .dockerignore  .npmrc  Dockerfile  Dockerfile.deps  Dockerfile.dev  Dockerfile.test  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
api-node/scripts/: docker-entrypoint-dev.sh
api-node/src/: app.ts  config.ts  main.ts  openai.ts  routes.ts
api-node/test/: smoke.test.ts
api-rust/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.deps  Dockerfile.dev  Dockerfile.test
api-rust/scripts/: docker-entrypoint-dev.sh
api-rust/src/: app.rs  config.rs  lib.rs  main.rs  openai.rs  routes.rs
api-rust/test/: smoke.rs
local-env/: write-app-secret-envs.sh
local-env/network/: Corefile
local-env/notification/: Dockerfile  dns-filter-watch.lib.sh  docker-entrypoint.sh  notify.sh
local-env/storage/: docker-entrypoint.sh  migrate-entrypoint.sh  test-entrypoint.sh
records/: just-secrets.tape
storage/: Dockerfile  Dockerfile.migration  Dockerfile.test
storage/migrations/: 000001_api_node_items.down.sql  000001_api_node_items.up.sql
web/: .dockerignore  .npmrc  Dockerfile  Dockerfile.deps  Dockerfile.dev  Dockerfile.test  biome.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/blocked/: page.tsx
web/scripts/: docker-entrypoint-dev.sh
web/test/: smoke.test.ts
